--- a/src/client/style/_DetailedPost.scss
+++ b/src/client/style/_DetailedPost.scss
@@ -26,6 +26,8 @@
       justify-content: stretch;
       img{
         flex: 1;
+        width: 100%;
+        height: 100%;
       }
       .DetailSecond{
         max-width: 335px;
@@ -60,7 +62,7 @@
             flex-direction: column;
             padding: 12px 16px;
             overflow-y: auto;
-            height: 400px;
+            max-height: 400px;
             img{
               width: 32px;
               height: 32px;
