--- a/src/client/style/_Post.scss
+++ b/src/client/style/_Post.scss
@@ -6,7 +6,10 @@
   border: 1px solid #e3e3e3;
   display: flex;
   flex-direction: column;
-
+a{
+  text-decoration: none;
+  color: black;
+}
   header {
     padding: 16px;
     height: 60px;
@@ -46,7 +49,13 @@
       .PostPanel {
         margin-top: 8px;
       }
-
+    .Comments{
+      display: flex;
+      flex-direction: column;
+      max-height: 300px;
+      overflow-y:auto;
+      word-break: break-word;
+    }
     }
     .Comment{
       display: flex;
