--- a/src/client/style/_User.scss
+++ b/src/client/style/_User.scss
@@ -49,7 +49,11 @@
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     div{
+      width: 293px;
+      height: 293px;
       img{
+        object-fit: cover;
+        height: 100%;
         width: 100%;
       }
     }
