--- a/src/client/style/_DetailedPost.scss
+++ b/src/client/style/_DetailedPost.scss
@@ -20,7 +20,8 @@
       z-index: 4;
       max-width: 935px;
       width: 100%;
-      min-height: 450px;
+      height: 500px;
+      min-height: 650px;
       background-color: black;
       display: flex;
       justify-content: stretch;
